# code-to-documentation-and-diagram

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  download.py  pyproject.toml  run_test.py
autodoc/: main.py  test.py
autodoc/api/: routes.py
autodoc/application/: coordinator.py  markdown_builder_node.py
autodoc/application/api/: routes.py
autodoc/application/workers/: architecture_worker.py  base_worker.py  class_worker.py  erd_worker.py  flow_worker.py  sequence_worker.py
autodoc/core/agents/: coordinator.py  state.py
autodoc/core/agents/workers/: architecture_worker.py  erd_worker.py  sequence_worker.py
autodoc/core/tools/: code_scanner.py
autodoc/domain/: project.py  state.py
autodoc/infrastructure/engine/: validator.py
autodoc/infrastructure/tools/: code_scanner.py
autodoc/infrastructure/utils/: git_handler.py  language_detector.py
autodoc/interfaces/: __init__.py
autodoc/interfaces/api/: routes.py
autodoc/schemas/: project.py
autodoc/utils/: language_detector.py
docs/: PRD.md
docs/adr/: 0001-agentic-diagram-generation.md
test_project/: main.py  models.py
test_project/diagrams/mermaid/: classes.md  data_models.md  sequence.md
test_project/generated_docs/: Architecture.md  Classes.md  Data_Models.md  Documentation.md  Flows.md
test_project_go/: go.mod  main.go
test_project_node/: index.js  package.json
tests/: test_diagram_export.py  test_git_handler.py  test_language_detector.py  test_workers.py
