[project]
name = "code-to-documentation-and-diagram"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sumsam Ali", email = "sumsamali.cs@gmail.com"},
]
dependencies = ["fastapi>=0.136.1", "uvicorn>=0.47.0", "langgraph>=1.2.0", "langchain>=1.3.1", "langchain-openai>=1.2.1", "pydantic>=2.13.4", "diagrams>=0.25.1", "httpx>=0.28.1", "gitpython>=3.1.50", "sqlalchemy>=2.0.49", "python-dotenv>=1.2.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn autodoc.main:app --port 8000 --reload --reload-dir autodoc --access-log --log-level info"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
